langfuse_web/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: langfuse
  labels:
    component: langfuse
spec:
  to:
    kind: Service
    name: langfuse-service
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
